# amarsmer

./: CMakeLists.txt  README.md  package.xml
amarsmer_control/: CMakeLists.txt  package.xml
amarsmer_control/amarsmer_control/: __init__.py
amarsmer_control/config/: cascaded_pid.yaml  robot.yaml  thruster_manager.yaml  thrusters_plasmar2_joints.yaml
amarsmer_control/launch/: AI_launch.py  AI_test_launch.py  AI_train_launch.py  MPC_launch.py  PID_launch.py  Sim_launch.py  control_launch.py  rviz_launch.py  tam_launch.py  wrench_launch.py
amarsmer_control/src/: control.py  control_manager.py  full_mpc.py  hydrodynamic_model.py  hydrodynamic_model_bu.py  mpc_control.py  path_generation.py  path_publisher.py  pose_to_rpy.py  simulation_interface.py  ur_mpc.py  ur_mpc_control.py  ur_mpc_old.py
amarsmer_control/src/AI/: AI_run.py  AI_test_run .py  AI_train_run copy.py  AI_train_run.py  backprop.py  monitoring.py  online_training copy.py  online_training vibe_coded.py  online_training vibe_square.py  online_training.py
amarsmer_control/src/IA/: backprop.py  online_training.py
amarsmer_control/src/MPC/: full_mpc.py  mpc_control.py  planar_mpc.py  planar_mpc_control.py  ur_mpc.py  ur_mpc_control.py  uvr_mpc.py  uvr_mpc_control.py
amarsmer_control/src/PID/: PID.py  PID_control.py
amarsmer_control/src/_custom_libraries/: custom_functions.py  functions.py  path_generation.py  path_publisher.py
amarsmer_control/src/legacy/: AI_run (Copy).py  AI_run.py  AI_test_launch.py  AI_train_run copy.py  backup_AI_run.py  robot_sim.py  run_BU.py  ur_mpc_control copy.py
amarsmer_description/: package.xml  path_generation.py  poses.json  sdf_generation.py
amarsmer_description/launch/: rov.rviz  state_publisher_launch.py  thrusters_plasmar2.yaml  thrusters_plasmar_ur.yaml  thrusters_plasmar_uvr.yaml  upload_rov_launch.py  world_launch.py
amarsmer_description/urdf/: amarsmer.xacro  hydrodynamics.xacro  path_markers.sdf  thrusters.xacro  thrusters_plasmar1.xacro  thrusters_plasmar1a.xacro  thrusters_plasmar1b.xacro  thrusters_plasmar2.xacro  thrusters_plasmar_ur.xacro  thrusters_plasmar_uvr.xacro  world.sdf
amarsmer_description/urdf/snippets/: all_sensor_snippets.xacro
amarsmer_interfaces/: CMakeLists.txt  package.xml
amarsmer_interfaces/msg/: InCtrl.msg
amarsmer_interfaces/srv/: RequestPath.srv
launch/: rov.rviz  state_publisher_launch.py  upload_rov_launch.py  world_launch.py
urdf/: amarsmer.xacro  thrusters_plasmar2.xacro
